[project]
name = "vllm-benchmark-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.19.1",
    "matplotlib>=3.10.7",
    "openai>=2.38.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "pyinstaller>=6.20.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.13.0",
    "transformers>=5.9.0",
]

[project.scripts]
benchpress = "benchpress:main"
compare-runs = "benchpress:compare_runs_cli"
benchpress-experiment = "benchpress:experiment_cli"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["benchpress", "contracts", "tokenizer"]
